Took out the sidebar on index page

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="static/foundation/css/foundation.css">
         <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
         <link href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
+        <link href="static/css/custom.css" rel="stylesheet">
 
     </head>
     <body>
@@ -31,7 +32,7 @@
 
                 <div class="row">
 
-                    <div class="panel callout large-7 columns">
+                    <div class="panel callout large-12 columns">
 
                         <form method="POST" action="/recommend">
                             <h3> Enter a beer that you like, and I will recommend similar ones </h3>
@@ -43,12 +44,6 @@
                             </div>
                             <button type='submit' class='button'>Get recommendations</button>
                         </form>
-
-                    </div>
-
-                    <div class="large-5 columns">
-
-                        <h3>Sidebar Five Columns</h3>
 
                     </div>
 
