--- a/templates/index.html
+++ b/templates/index.html
@@ -35,14 +35,20 @@
                     <div class="panel callout large-12 columns">
 
                         <form method="POST" action="/recommend">
-                            <h3> Enter a beer that you like, and I will recommend similar ones </h3>
+                            <h3> Enter a beer that you like, and I will recommend similar ones based on: </h3>
+
                             <div class="row prompt">
+                                <select name="querytype" id="querytype" class="large-12 columns">
+                                    <option value="0">User ratings</option>
+                                    <option value="1">Beer type</option>
+                                    <option value="2">Brewery</option>
+                                </select>
                                 <div class="ui-widget">
                                     <label for="beer"></label>
-                                    <input type="text" name="beer" id="beer" placeholder="What beer do you like?">
+                                    <input type="text" name="beer" id="beer" class="large-12 columns" placeholder="What beer do you like?">
                                 </div>
+                                <button type='submit' class='button'>Get recommendations</button>
                             </div>
-                            <button type='submit' class='button'>Get recommendations</button>
                         </form>
 
                     </div>
